# crowcpp

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
include/: HexUtils.h  IHashAdapter.h  IHashCalculator.h  OpenSSLAdapter.h  hash256.h  server.h
src/: HexUtils.cpp  OpenSSLAdapter.cpp  hash256.cpp  main.cpp  server.cpp
tests/: hash256_tests.cpp  main_test.cpp
